--- a/disease_clinical_frequency.ipynb
+++ b/disease_clinical_frequency.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "# pd_dis=cloudpickle.load(open(\"condition_statistics.pkl\", \"rb\" ) )\n",
+    "pd_dis=cloudpickle.load(open(\"condition_statistics.pkl\", \"rb\" ) )\n",
     "pd_dis['us_freq']=0\n",
     "for (index,row) in df_reports.iterrows():\n",
     "    diag = pd_dis.loc[[re.search(r'\\b'+word+r'\\b', row['Disease'].lower())>0 for word in d_list],0].tolist()\n",
