--- a/forum_classification.ipynb
+++ b/forum_classification.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "import cloudpickle\n",
     "with open(\"forum_vectorizer.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(vectorizer, handle)\n",
     "with open(\"condition_names.pkl\", 'wb') as handle:\n",
