--- a/disease_synonyms.ipynb
+++ b/disease_synonyms.ipynb
@@ -6,16 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/will/anaconda/lib/python2.7/site-packages/fuzzywuzzy/fuzz.py:35: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
-      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fuzzywuzzy import process\n",
     "import pandas as pd\n",
@@ -24,11 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "df_dis = pd.read_csv(\"diseasedata/disease_list.csv\",index_col=0, header=0)\n",
     "diseases = df_dis['name'].str.strip().str.replace(' +',' ').str.lower()\n",
@@ -53,11 +53,14 @@
     "           ('cdc vision and mission' not in a) and \\\n",
     "           ('health disparities' not in a) and \\\n",
     "           ('health history' not in a) and \\\n",
-    "           ('biopsy' not in a))]\n",
+    "           ('biopsy' not in a) and \\\n",
+    "           ('ra' != a))]\n",
     "\n",
     "\n",
     "\n",
-    "for c in to_syn:\n",
+    "for i,c in enumerate(to_syn):\n",
+    "    if(i%1000==0):\n",
+    "        print i\n",
     "    if(c[0] not in uniquer):\n",
     "        uniquer.append(c[0])\n",
     "        match = process.extractOne(c[0], lookup.keys())\n",
@@ -84,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import cloudpickle\n",
-    "with open(\"disease_list.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/disease_list.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(disease_list, handle)\n",
-    "with open(\"disease_lookup.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/disease_lookup.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(lookup, handle)"
    ]
   },
