production analysis pipelines, almost ready to go with the under the hood analysis

--- a/data_tidy.ipynb
+++ b/data_tidy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,6 +14,9 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, 'util')\n",
     "import readability\n"
    ]
   },
@@ -65,30 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Forum dataset consists of 145255 posts across 63846 conversations\n"
-     ]
-    }
-   ],
-   "source": [
-    "posts=df.shape[0]\n",
-    "convos=df['post'].unique().shape[0]\n",
-    "print \"Forum dataset consists of %s posts across %s conversations\" % (posts,convos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [
     {
@@ -773,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -791,14 +773,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import cloudpickle\n",
-    "with open(\"cleaned_forum_data.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/cleaned_forum_data.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(df_crop, handle)"
    ]
   },
