--- a/diagnosis_identifier.ipynb
+++ b/diagnosis_identifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -13,29 +13,28 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import readability\n"
+    "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import cloudpickle\n",
-    "disease_lookup = cloudpickle.load(open(\"disease_lookup.pkl\", \"rb\" ) )\n",
-    "disease_list = cloudpickle.load(open(\"disease_list.pkl\", \"rb\" ) )\n",
-    "df_crop = cloudpickle.load(open(\"cleaned_forum_data.pkl\", \"rb\" ) )\n"
+    "disease_lookup = cloudpickle.load(open(\"pickles/disease_lookup.pkl\", \"rb\" ) )\n",
+    "disease_list = cloudpickle.load(open(\"pickles/disease_list.pkl\", \"rb\" ) )\n",
+    "df_crop = cloudpickle.load(open(\"pickles/cleaned_forum_data.pkl\", \"rb\" ) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -106,6 +105,14 @@
       "61000\n",
       "62000\n",
       "63000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/will/anaconda/lib/python2.7/site-packages/nltk/twitter/__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\"The twython library has not been installed. \"\n"
      ]
     }
    ],
@@ -187,37 +194,34 @@
    },
    "outputs": [],
    "source": [
-    "all_lab = cloudpickle.load(open(\"alltext_labels.pkl\", \"rb\" ) )\n",
-    "doc_lab = cloudpickle.load(open(\"doctortext_labels.pkl\", \"rb\" ) )\n",
-    "dcn_lab = cloudpickle.load(open(\"doctornegtext_labels.pkl\", \"rb\" ) )\n",
-    "ask_lab = cloudpickle.load(open(\"askertext_labels.pkl\", \"rb\" ) )\n"
+    "# all_lab = cloudpickle.load(open(\"alltext_labels.pkl\", \"rb\" ) )\n",
+    "# doc_lab = cloudpickle.load(open(\"doctortext_labels.pkl\", \"rb\" ) )\n",
+    "# dcn_lab = cloudpickle.load(open(\"doctornegtext_labels.pkl\", \"rb\" ) )\n",
+    "# ask_lab = cloudpickle.load(open(\"askertext_labels.pkl\", \"rb\" ) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# all_lab = all_lab.asformat('csr')\n",
-    "# doc_lab = doc_lab.asformat('csr')\n",
-    "# dcn_lab = dcn_lab.asformat('csr')\n",
-    "# ask_lab = ask_lab.asformat('csr')"
+    "all_lab = all_lab.asformat('csr')\n",
+    "doc_lab = doc_lab.asformat('csr')\n",
+    "dcn_lab = dcn_lab.asformat('csr')\n",
+    "ask_lab = ask_lab.asformat('csr')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "disease_list = cloudpickle.load(open(\"disease_list.pkl\", \"rb\" ) )\n",
-    "\n",
     "min_appear=100\n",
     "\n",
     "disease_list_trunc=[disease_list[i] for i in np.where(all_lab.sum(axis=0)>min_appear)[1].tolist()]\n",
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +249,7 @@
        "(63846, 72)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,85 +268,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import cloudpickle\n",
-    "with open(\"alltext_labels.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/alltext_labels.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(all_lab, handle)\n",
-    "with open(\"doctortext_labels.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/doctortext_labels.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(doc_lab, handle)\n",
-    "with open(\"doctornegtext_labels.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/doctornegtext_labels.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(dcn_lab, handle)\n",
-    "with open(\"askertext_labels.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/askertext_labels.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(ask_lab, handle)\n",
-    "with open(\"disease_list.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/disease_list_trunc.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(disease_list_trunc, handle)\n",
-    "with open(\"disease_lookup.pkl\", 'wb') as handle:\n",
+    "with open(\"pickles/disease_lookup_trunc.pkl\", 'wb') as handle:\n",
     "    cloudpickle.dump(disease_lookup_trunc, handle)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.text.Text at 0x7efbb6a63cd0>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXIAAAESCAYAAADg0F5TAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl0XHd99/H3ndFoH22WbNlOHCdx8jUOJgezxDgLgSQN\nHDjloaTLc7qkS7qRtk+ep08PkK6UpXtK4Tx9utBAodvTAg2QEpoQQkIS0+AEiLP4ix1vsSXbkiVb\n+zYzzx9z5YzHWsbyaGbu6PM6x0eje6/u/RzZ/ujqN/f+bpDJZBARkeiKlTuAiIhcGBW5iEjEqchF\nRCJORS4iEnEqchGRiFORi4hEXE0hG5nZPcB2IA3c5e67wuXrgH8EMkAAXAa8z93/ZXniiohIvkWL\n3MxuADa5+w4z2wzcC+wAcPce4C3hdnHgEeBLyxdXRETyFTK0chNwH4C77wHazKx5ju1+Gvi8u48V\nL56IiCymkCLvBvpyPu8Pl+W7A/i7YoQSEZHCLeXNziB/gZltB15095ELjyQiIuejkDc7ezj7DHwd\n0Ju3zTuBrxVywEwmkwmCc34WiIjIwuYtzkKK/EHg94C/NbNtwFF3H83b5g3APxeUJAjo6xsuZNOK\n0dWVjFTmqOUFZS6FqOUFZc7f73wWHVpx953A02b2BPAx4E4zu93M3pWzWTdw4kKDiojI+SvoOnJ3\nvztv0e689VcXLZGIiJwX3dkpIhJxKnIRkYhTkYuIRJyKXEQk4lTkIiIRpyIXEYk4FbmISMSpyEVE\nIk5FLiIScSpyEZGIU5GLiEScilxEJOJU5CIiEaciFxGJOBW5iEjEqchFRCJORS4iEnEqchGRiFOR\ni4hEnIpcRCTiVOQiIhGnIhcRiTgVuYhIxNUUspGZ3QNsB9LAXe6+K2fdRcA/AwngGXd/73IEFRGR\nuS16Rm5mNwCb3H0HcAfw8bxN/gz4E3ffDqTCYhcRkRIpZGjlJuA+AHffA7SZWTOAmQXAdcCXw/W/\n6u5HlimriIjMoZAi7wb6cj7vD5cBdAEjwMfM7Jtm9tEi5xMRkUUUNEaeJ8h7vR74c+Aw8B9m9nZ3\nf2C+L77/oSeIJxqWcNhztTTGufaNVxdlX4vp6kqW5DjFErW8oMylELW8oMyFKKTIe3jlDBxgHdAb\nvu4HDrr7QQAzexi4Cpi3yKdSCVI0Lilsvon+U/T1DRdlXwvp6kqW5DjFErW8oMylELW8oMz5+51P\nIUMrDwK3AZjZNuCou48CuHsK2G9ml4fbvg7wC0orIiLnZdEzcnffaWZPm9kTQAq408xuB065+xeB\n/wl8Onzjc7e7f3l5I4uISK6Cxsjd/e68Rbtz1r0EXF/MUCIiUjjd2SkiEnEqchGRiFORi4hEnIpc\nRCTiVOQiIhGnIhcRiTgVuYhIxKnIRUQiTkUuIhJxKnIRkYhTkYuIRJyKXEQk4lTkIiIRpyIXEYk4\nFbmISMSpyEVEIk5FLiIScSpyEZGIU5GLiEScilxEJOJU5CIiEaciFxGJOBW5iEjE1RSykZndA2wH\n0sBd7r4rZ90B4HC4LgP8uLv3LkNWERGZw6JFbmY3AJvcfYeZbQbuBXbkbJIB3ubu48uUUUREFlDI\n0MpNwH0A7r4HaDOz5pz1QfhHRETKoJAi7wb6cj7vD5fl+isz+6aZfbRoyUREpCAFjZHnyT/7/m3g\nq8AA8EUz+yF3/8JCO0g21y/hsOdKpBvo6koWZV+LKdVxiiVqeUGZSyFqeUGZC1FIkfdw9hn4OuDM\nm5nu/g+zr83sK8BWYMEiHx6ZOL+U86iZHqevb7go+1pIV1eyJMcplqjlBWUuhajlBWXO3+98Chla\neRC4DcDMtgFH3X00/LzFzB41s9lT7BuA5y4sroiInI9Fz8jdfaeZPW1mTwAp4E4zux045e5fNLPP\nATvNbBj4rrt/fpkzi4hIjoLGyN397rxFu3PWfQL4RDFDiYhI4XRnp4hIxKnIRUQiTkUuIhJxKnIR\nkYhTkYuIRJyKXEQk4spW5CPj0xzoHSKdzpQrgohIVVjKXCsX7PTIJA9++2XGJ1N4+ymuf81amhoS\n5YgiIhJ5JT8jHxyZ5j+fypZ4Z2s9JwbH+fKTB3n5xEipo4iIVIWSF/kDuwaYmErxxi2refv2DWy/\nag2pVIZHv9PD8NhUqeOIiEReyYt8cjrNGzavZvOGdoIg4MqL29jx6m7SmQzf+X5/qeOIiEReyYu8\ntibgyg1tZy3buDZJZ2s9B48N03dKT4wTETkfJS/yDV31xGNnP5siCAJeZ10A7NpzgkxGV7KIiBSq\n5EV+yZq5nw60pqORDWua6Ts1weHjeuNTRKRQJS/ydR11867bdmUXQQDf3duvs3IRkQKVvMhr4vmP\n/HxFS1Mtl61t4fToFEf7RkuYSkQkuiruFv0tl3YA8PzBgTInERGJhoor8vZkHWtXNXJ8YJz+08V5\nSLOISDWruCIHuCo8K3/hgM7KRUQWU5FFvnZVI+3JOg4dH2ZkbLrccUREKlpFFnkQBGzZ2E4mAy8e\nGix3HBGRilaRRQ6wcW0LjXU17D1yisnpVLnjiIhUrIot8ngsYPPGdmZSGfa+fKrccUREKlZBRW5m\n95jZk2b2uJm9fp5t/sDMHilmuCsvaiURj/HioVOk9AAKEZE5LfpgCTO7Adjk7jvMbDNwL7Ajb5tX\nAdcDRZ2HtjYR54qLW3nh4CAHe4e4fH3rWeszmQxDQ6eLdrxksoUgmP+GJRGRSlTIE4JuAu4DcPc9\nZtZmZs3unjshyp8CHwA+WOyAmy9p58VDgzx/YIDL1p1dtGNjozz0X/toaGy64OOMj41yyzWbaGlp\nXXxjEZEKUkiRdwO7cj7vD5ftAzCz24GHgcNFTwc0NyTY2J3kQO8wPf1jrO86u7QbGptobEoux6FF\nRCJhKc/sPHNKbGbtwE8CPwBsyF23kGTz3DMgzucNW7o50DvMnsODbL501Znltel6ZmJ1NJ3n/uYS\nY4rOziStrXP/UOjqitYPi6jlBWUuhajlBWUuRCFF3kP2DHzWOqA3fP1WYA3wOFAPXGZmf+buv77Q\nDodHzu/W+/pEjHWdTRztG2X/y4N0tTcAMDk0QSpRR5oLv5V/bHSS/v5hpqbOff+3qytJX9/wBR+j\nVKKWF5S5FKKWF5Q5f7/zKeSqlQeB2wDMbBtw1N1HAdz98+6+1d13AO8GnlmsxJdq62XZ2/Z37z+5\nHLsXEYmsRYvc3XcCT5vZE8DHgDvN7HYze9eyp8uxur2BrrZ6jvSNMjg8WcpDi4hUtILGyN397rxF\nu+fY5hDZoZZlEQQBWy9bxdefOcpz+09y/dXrlutQIiKRUrF3ds5lfVcT7ck6DvYOMzxW1EvWRUQi\nK1JFHgQBr760gwzwvKa4FREBIlbkAJd0J2luSLDv6BDjU+lyxxERKbvIFXkslj0rT6czfL93ptxx\nRETKLnJFDnD5+hYa6uLsOz7N1LTOykVkZYtkkcfjMbZs7GAmDS/1jpY7johIWUWyyAGuvLiN2jjs\nPTpKKqWzchFZuSJb5ImaGJetSTA1k+bQ8ZHFv0BEpEpFtsgBLl+dvZ9JTxASkZUs0kXeXB9jdVst\nxwfHOT2i2/ZFZGWKdJEDXNadnZ9875HiPSlIRCRKIl/k61bVU18b56WjQ3rTU0RWpMgXeSwWcPn6\nVianUxzWm54isgJFvsgBrrgo+5zN7x/Rm54isvJURZG3NNWyur2B4wPjjE/qtn0RWVmqosgBNqxp\nBuBlDa+IyApTRUWefZ7doePRer6fiMiFqpoib25IsKq1nmMDY0xOpcodR0SkZKqmyAEuWdNMJgMv\nn9DwioisHFVV5LPDK4c1vCIiK0hVFXlLUy3tyTp6+seYmtHwioisDFVV5JC9eiWdyXD0hOYpF5GV\noeqK/JLZ4RWNk4vIClFTyEZmdg+wHUgDd7n7rpx1Pw/8LDADfM/df2U5ghaqtbmWpvoaek+Oks5k\niAVBOeOIiCy7Rc/IzewGYJO77wDuAD6es64B+BHgWne/HniVmW1frrCFCIKAtZ1NTE2nGRiaKGcU\nEZGSKGRo5SbgPgB33wO0mVlz+Pm4u9/i7mkzawRagGPLlrZA61Y1AtDbP1bmJCIiy6+QIu8G+nI+\n7w+XnWFm7wP2Av/q7geLlm6Juldl5yjv6dcbniJS/QoaI89zzqCzu/+RmX0MeMDMHnf3nQvtINlc\nv4TDnqs2Xc9MrI6mvP0lgdXtDfSdmqCuLkFtIr7ovmJM0dmZpLU1Oef6rq65l1eqqOUFZS6FqOUF\nZS5EIUXew9ln4OuAXgAz6wC2uvuj7j5pZg8A1wILFvnwSHHGrieHJkgl6khz7v7WtDdwYnCcl14e\n5KLVzYvua2x0kv7+Yaamzv0lpasrSV9fdG4yilpeUOZSiFpeUOb8/c6nkKGVB4HbAMxsG3DU3WfH\nLGqAe8PxcYA3Ar70qMWztjMcXjmp4RURqW6LnpG7+04ze9rMngBSwJ1mdjtwyt2/aGYfBL5hZtNk\nLz/88jJnLkhXWwM18UBveIpI1StojNzd785btDtn3WeAzxQzVDHEYwHdHY0c6RtlZHya5oZEuSOJ\niCyLqruzM9fs8EqvhldEpIpVd5GH15MfHxgvcxIRkeVT1UXe2lRLfW2cYwNjZDKZcscREVkWVV3k\nQRCwur2BsYkZRsanyx1HRGRZVHWRA6zp0PCKiFS3qi/y7o4GAI4P6DJEEalOVV/kbc111CZiHB/U\nGbmIVKeqL/IgCFjT3sjI+LTGyUWkKlV9kQOs0fCKiFSxFVLkesNTRKrXiijy9mQdiZoYxwd1Ri4i\n1WdFFHksCFjT3sDw2DSjExonF5HqsiKKHDS8IiLVawUWuYZXRKS6rJgi70jWkYjHVOQiUnVWTJHH\nYtl5V4bGphmbmCl3HBGRolkxRQ4515Pr6hURqSIrrMg1Ti4i1WdFFfmqlnpq4oGuXBGRqrKiijwW\nC+hqa+D06BTjkxonF5HqsKKKHKB7dnhFsyGKSJVYcUWucXIRqTYrrshXtdYTjwUqchGpGjWFbGRm\n9wDbgTRwl7vvyln3FuCjwAzg7n7HcgQtlngsoKu9gWMnx5iYmqG+tqBvgYhIxVr0jNzMbgA2ufsO\n4A7g43mb/DXwHne/Hmgxs7cVP2ZxrQ2HV3pP6qxcRKKvkKGVm4D7ANx9D9BmZs0561/v7j3h6z5g\nVXEjFt/aThW5iFSPQoq8m2xBz+oPlwHg7kMAZrYWuAX4SjEDLoeOlnpqEzF6+0fJZDLljiMickGW\nMkAc5C8ws9XAl4BfdvfBxXaQbK5fwmHPVZuuZyZWR9MS9nfx6iQvHT1NJojR0lxHjCk6O5O0tibn\n3L6ra+7llSpqeUGZSyFqeUGZC1FIkfeQcwYOrAN6Zz8xsyTZs/APuPvDhRx0eGTifDLOa3JoglSi\njjTnv7/O1npeOnqavYcHsQ1tjI1O0t8/zNTUub+kdHUl6esbLkbkkohaXlDmUohaXlDm/P3Op5Ch\nlQeB2wDMbBtw1N1Hc9bfA9zj7g9dSMhSW7tqdpx8dJEtRUQq26Jn5O6+08yeNrMngBRwp5ndDpwi\nW/I/AVxuZj8PZIB/cvdPLmfoYkg2JmhuSHBsYIy0xslFJMIKGiN397vzFu3Oed1QvDilEwQB3asa\n2XfkNANDkzTqcnIRiagVd2dnLg2viEg1UJEDvf26nlxEomtFF3l9bQ0dLXWcGBxjeiZd7jgiIkuy\noosc4OLVzaQzcGxwstxRRESWREW+OjvbQM/J4lzbLiJSaiu+yNuTdTTV13BsYIJUSpchikj0rPgi\nD4KAi9c0M53KsK8nWneQiYiAihx4ZXhl94FTZU4iInL+VOTAmvZGEjUBzx08pdkQRSRyVORALBaw\ntr2eUyPTHD4+Uu44IiLnRUUeWrcqOxXuM9/vW2RLEZHKoiIPrWmvIxEPeGrPCQ2viEikqMhDiZoY\nWy9r4/jAGC/1DJU7johIwVTkOa7Z3AnAE7t7F9lSRKRyqMhzXLE+SXuyjqdePM7UdKrccURECqIi\nzxGLBex4dTfjkym96SkikaEiz3Pt1rWAhldEJDpU5Hm6OxrZdFErLxwcZGBIE2mJSOVTkc/huq1r\nyQDffFZn5SJS+VTkc3jD5tU01tXw9WeO6E1PEal4KvI5NNTV8JZt6xkem9ZYuYhUPBX5PG5+/cXU\nxGN89anDpFJ6DJyIVC4V+Txam2q5bms3facmeFJn5SJSwQoqcjO7x8yeNLPHzez1eevqzOzvzeyp\n5YlYPrdes4EA+PwjezX/iohUrEWL3MxuADa5+w7gDuDjeZv8CVB1JQ7ZecpfZ128dOQ0zx0YKHcc\nEZE5FXJGfhNwH4C77wHazKw5Z/37gfuXIVtFeOeOjQQB/Nsj+0indVYuIpWnpoBtuoFdOZ/3h8v2\nAbj7mJktQ7TSymQyDA+fO+thWwNcf3U3j333GA89tZ83beksaH/JZAtBEBQ7pojIOQop8nwX3E7J\n5voL3QUAtel6ZmJ1NBVhf+OjJ/m2H6ejY+acdd1tCWriAV/aeYSamuyUtwsZGxvlB2/cQmtrywXn\nWqqurmTZjr1Uyrz8opYXlLkQhRR5D9kz8FnrgAu6jGN4pDi3vk8OTZBK1JHmwvc3OjpFLBYnTe05\n67o6W7jq0jG+t+8kzx4Y4bVXLHxWns5M0t8/zNRUeS4K6upK0tc3XJZjL5UyL7+o5QVlzt/vfApp\nmgeB2wDMbBtw1N1H87YJKMKZeiXbsrGDhroaXjgwwPDYVLnjiIicsWiRu/tO4GkzewL4GHCnmd1u\nZu8CMLOHgAeALWb2rJn9zLImLpNETYzXWRepdIadzx3X5YgiUjEKGiN397vzFu3OWXdLURNVsEvX\nJjnYO8SRvlH2HjnNlRe3lTuSiIju7DwfQRCw/ao1JGpiPL2nj9Hx6XJHEhFRkZ+vxvoEr9+8mulU\nmp3PH9MQi4iUnYp8CTatb2FdZyM9/WM8rzs+RaTMVORLEAQB125dS0NdnO/s7ef4wFi5I4nICqYi\nX6KGuhpuuHodAI99r5fxyXNvJBIRKQUV+QVY09HIa6/oZHxyhse+20MqrXnLRaT0VOQX6KpLO9iw\nppnjg+M8uVtvfopI6anIL1AQBFz3mrV0tdVzoHeY7+ztL3ckEVlhVORFUBOP8ZZt60k2Jnhu/wB7\nj46UO5KIrCAq8iKpr63h5tdfRENdnO/tH+JrzxwrdyQRWSFU5EWUbKzl1jduoKEuzv3fOsoXHntJ\nY+YisuxU5EXW0lTLja9ZRWdLHfc/eYhP3v8ik9OpcscSkSqmIl8GTfU1/Oq7jUvXtrDz+WN85DNP\nc2JQNw2JyPJQkS+T1qYE7//xbdz42vUc6Rvhg5/exWPf6yGtoRYRKTIV+TJK1MT4qVuNn3vHq8hk\nMnz6gT388T8+Q09//nM5RESWTkVeAtduXctHfn47267s4vtHTvM7f/cUn35gDwNDxXnknYisbEt5\n+LIsIpPJMDw8dNayOPBTN29g2+UtfGnnUR77Xg9P7O7lTVs6ufHqNXS21i24z2SyhSCo6qfpicgS\nqciXwfjYKI8+M0Bbx6o511/36nYOnxjnxcPDPP5cH48/18f6VfVcvq6Jrtbacwp7fGyUW67ZREtL\naynii0jEqMiXSX1DI41N8z/1ektzC5s3rubQ8WFeODDI0ZMTHD05QXNDgk3rW7h8fStNDYkSJhaR\nqFKRl1EsFnDp2hY2difpOzXO3iOnOXRsmO/uO8l3951kXWcjl69vZVWTrnQRkfmpyCtAEASsbm9k\ndXsjb3zVGg72DrHv6Gl6+sfo6R8jHgvYf2yCa65ax1WXdtDSWFvuyCJSQVTkFSZRE+OKi9u44uI2\nTo1McqBniIO9Qzy7/xTP7j9FAGzoTrLlknY2XdTK5etbVewiK1xBRW5m9wDbgTRwl7vvyll3M/AR\nYAZ4wN0/vBxBV6K25jpee2UXV66rY9NF7bx0bJLn9p88MwTDf2W3W9VSx9rOJtZ3NrFuVRNbruii\nIRbQWK+f0yIrwaL/083sBmCTu+8ws83AvcCOnE3+ArgF6AUeNbPPufueZUm7gjUnprluSxvXbWlj\ncjrFoeOj7O8d4eCxUXoHxnlu/wDP7Q8fBP1A9ttfXxunvTlBW3Mtbc21tDfX0tqUoKujhZamOpKN\nCZKNCeoScV3aKBJhhZyy3QTcB+Due8yszcya3X3EzC4FTrp7D4CZfSXcXkVeRPNdzthcH/Dqjc28\nemMzUzNphsdmGBqbZnwqw8DQJGOTKfpPT9I7sPCNR4magIbaOHWJOPW1ceoSMepq49Qn4tTVxqhP\nxKlNxKitiZGoOftjS7KZuto4tTXx7LJEjNqa+JmPsZh+QIgst0KKvBvYlfN5f7hsX/ixL2fdCeCy\noqWTMxa7nLERaAsvM0821zM88kp5T82kGBufYXRihhP9/YxPTBPU1DM1nWYy/DOdSjM0Ns3A8BSp\ndPGukonHgpzyD878EIjHgrP+1NcnSM2kqKurJR6LEY8H1MQCYrHgzOdnfU08NvfrWAABxIKAIAgI\ngCAg53UQfp7zmiBvm9zt5vi6cPvhqTSDg69MtzD7W82ZH105P8NeWRbkryL/l6Hc347y9xWcveFZ\ny85eN/sheGXTmpqz7iae67ewIP84hWbJM++/oHlWzLd9Td0Ep0cmC97+fKYyOt8ppufbPJOXJhOP\nc/L0OOkMTE2lmJhOMTmVYjL8eGpkkuOD4/SfHue6rWvZflX3eeWYy1IGURf6+1v09Gt6coSJ6eLc\nmh5LTzE+Vpx5SybGR4nFahgbHT73OEwxNnruP6al7KvY2eYyV97aGNQ2QqZxmlhzDW0d899clM5k\nmEll/0zPpM+8TqVz/qSyd69OTc+QqG0glcmQSkM6nf2YSmdIhx9TmQwzqRmmpmEoXF/EnxUikRQA\nr7qkvSj7KqTIe8ieec9aR3Y8fHbd2px168Nl8/rRd71Vv2uLiBRRIZNmPQjcBmBm24Cj7j4K4O6H\ngKSZbTCzGuCd4fYiIlIiQSHjRGb2UeDNQAq4E9gGnHL3L5rZdcAfkx22+py7//ky5hURkTwFFbmI\niFQuzUcuIhJxKnIRkYhTkYuIRFxJJ+NYaM6WSmVmfwxcR/YhP3/o7v9e5kiLMrN64Dng9939M+XO\nsxgz+3HgN4Bp4Hfc/YEyR5qXmTUBnwHagVqy3+OKvVLLzF4DfAG4x93/0swuAj5L9iSuF/hJd58u\nZ8Zcc+S9mOy0IAlgCvgJdz9Rzoz58jPnLL+V7PxTy37CXLIz8tw5W4A7gI+X6thLZWY3AleFmd8O\nfKy8iQr228DJcocohJl1AL9Ddv6edwLvKm+iRf00sMfd3wr8MNm5hiqSmTUCf8bZlwT/PvAJd38z\n8BLws+XINpd58n4I+Bt3v5HsVCG/XoZo85onM2ZWB7yfRe6rKZZSDq2cNWcL0GZmzSU8/lI8RvY/\nK8ApoNHMKvqGJjMzwID/KHeWAt0MPOTuY+5+3N1/qdyBFnECmJ30poOzp6ioNBPAO4DjOctuBL4c\nvv4y2e9/pZgr73uBz4ev+8h+zyvJXJkB7gY+Qfa3iGVXyiLPn5dlds6WiuXuaXcfCz+9A/iKu1f6\n9Zp/CvwvCpguoUJsBJrM7Itm9qiZvbXcgRbi7v8GXGxme4FHyH6vK1L47ze/SJpyhlJOcPad2WU1\nV97wB3zazGJk72H5p/Kkm9tcmc3sSrK/yX+BEv0/LOebnVEpGszsXcDPAL9S7iwLMbOfBB5198Ph\noih8jwOyZ1n/jez3+FPljbOwcDz/ZXe/guzZ7P8pc6QLEYV/H4Ql/lngYXd/pNx5CjB7MlUypSzy\nheZsqVjhGxYfAN7m7sWZBWv5vAP4YTPbSfY3iN+q9DNcsr+SPunuGXffDwybWWe5Qy3gWuA/Adz9\nWeCiSh9uyzMcjt9CAXMjVYhPAe7uHyp3kMWY2TpgM/Av4f/DtWa27D98SnnVyoPA7wF/mz9nS6Uy\nsxay0w/c5O6ny51nMe7+Y7Ovzex3gQPu/vUyRirEg8CnwquDOsj+6t9f5kwL2Uf2yqt/N7NLgJEI\nDLfl+hrwHrJDFO8BvlreOPMK4MxvQJPu/vtlzlOIIHw2w5WzC8zsgLu/ZbkPXLIid/edZva0mT3B\nK3O2VLofJfvG1r+GZ10Z4Kfc/Uh5Y1UPd+8xs88B3yL7/a3o4Svgr4F7zewbZC9J/YXyxpmfmV0D\nfBLoAmbM7JeAW4G/N7NfBA4Bf1/GiGeZI+8vkv0ej4dntRngBXevmH8j82R+s7sPhpuU5Ie85loR\nEYk43dkpIhJxKnIRkYhTkYuIRJyKXEQk4lTkIiIRpyIXEYk4FblULTOLm1m6RMe63MwOhK/fZ2Zv\nD1//95xtvh6xu0AlIko6H7lIic3exFUqGQB3/6OcZR80s/8XTq5U6dMlSESpyGVZmdmbyc7LfAS4\niuzDI2519wkz+yDZiadSwFGyDw1Imdkw2Xmof5Dswxv+gOzcMVcCv+zuXwsfOPCXQAPQDPymuz8c\nzjz3D8Ao8I15MtWTnb9jA9ny/YC7f9PM3kF2LvdRYAz4BXfvDc+0/4LsnPQbgV9y90fMbAfwf8nO\nIvhMzv4/BTwOXAxsAh42sx8iO0d8DVAP/E24vgb4rLv/lZndHn4/4mSnIj7o7u8xs7XAP4a7bwD+\n2t0/fR5/DVLlNLQipbAdeH/4gI4UcKuZxckW5vXufgPZJ+7cGm7fBHzb3a8Lt3mHu78D+DDZ+akh\nW6B/6u43k30YxSfDWfJ+F/i7cH6LZ+fJ87+Bw+5+LdkHRdxhZg3A3wLvdvebyM5B8uGcrxlz91uB\njwC/Fi77E+A33P0W4FjeMTLu/nvh67eGt2zP/nbwa8Bg+HCHm4D3mdnGcN2bgJ9299cBV5vZ1WSn\ningxPKN/M9kfXCJnqMilFF5099knFh0COtw9RfaRf4+F85ZcDeTOevhE+PEI8GTO69bw9VvIDls8\nAvwLMAmsAbaSPRsGmG/CsGsIz9bdfZ+73072bP+Yu8/OyPkN4A05X/ON3Pzh6605OReanCx/XPwa\n4KHw+BN/y3UqAAABnklEQVTAt4Ft4bqncua3fjk81gPAzWZ2L9nfUv5qgWPJCqShFSmFmbzPg3BY\n4meBbeEwy78t8DW5r2dLcZLs2fNgzjrCNxNn3+CMz5Mnw7knMRnOLtz88fW5MhRyrNl9L/R5LGfZ\nOd8rd3cz20L2bPxHgLvIPkdWBNAZuZTPGrLT7E6E08G+Cahb5GtyfRP4MQAz6zSzPw+XP0/2+Z8A\nt8zztU8Cbwu/9jIzewj4PtAVPpwYsmPV31okw/Nh7oWOlSE7zg+v/AD4FuEwUvgw523A0/MdJLzy\n5Y3hlMTvJfuEIv3flTP0j0FKbfbM80Gg1cweB36L7AOYf9PMruDsM9b5rjr5H8C7zewx4H7g4XD5\nh4D3mtkDZIdL8s9wIfvg747waz8LfCgc4vg5slMWfx14a5hroQzvA/7CzO5n/nHrrwK7zOyynP18\nAmgxs0fJzg/+wZynOuWa3f4F4J5wGOnrwB+6e0kuq5Ro0DS2IiIRpzNyEZGIU5GLiEScilxEJOJU\n5CIiEaciFxGJOBW5iEjEqchFRCJORS4iEnH/H+6WnZlS3yaIAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7efbb6bf0190>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "dc=doc_lab.asformat('csr')\n",
-    "todc=dc.sum(axis=1)\n",
-    "sns.distplot(todc[ (todc < 15)],15,kde_kws={'bw':0.5})\n",
-    "plt.xlim(0, 15)\n",
-    "plt.xlabel(\"named conditions\")\n",
-    "# sns.distplot(ak.sum(axis=0),100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('acne',\n",
-       " 'http://www.mayoclinic.org/diseases-conditions/diseases-conditions/acne/basics/definition/con-20020580',\n",
-       " ['acne', 'baby acne'])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
