--- a/doc2vec_try.ipynb
+++ b/doc2vec_try.ipynb
@@ -51,14 +51,14 @@
    },
    "outputs": [],
    "source": [
-    "df = cloudpickle.load(open(\"cleaned_forum_data.pkl\", \"rb\" ) )\n",
+    "df = cloudpickle.load(open(\"pickles/cleaned_forum_data.pkl\", \"rb\" ) )\n",
     "\n",
     "totest=20000\n",
     "\n",
     "asktxt = df['askertxt'].as_matrix()[:totest]\n",
     "doctxt = df['doctortxt'].as_matrix()[:totest]\n",
     "\n",
-    "diag = cloudpickle.load(open(\"doctortext_labels.pkl\", \"rb\" ) )[:totest,:]\n",
+    "diag = cloudpickle.load(open(\"pickles/doctortext_labels.pkl\", \"rb\" ) )[:totest,:]\n",
     "y=np.asarray(diag.todense()).squeeze()\n",
     "y=y[:,y.sum(axis=0)>200]"
    ]
