--- a/disease_synonyms.ipynb
+++ b/disease_synonyms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
     "           ('health disparities' not in a) and \\\n",
     "           ('health history' not in a) and \\\n",
     "           ('biopsy' not in a) and \\\n",
-    "           ('ra' != a))]\n",
+    "           (len(a)>2))]\n",
     "\n",
     "\n",
     "\n",
@@ -76,18 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#sorted([(c[0],len(c[2]),c[2]) for c in disease_list],key=lambda x: x[1],reverse=True)[:25]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
