all analysis no data

--- a/functional_classifier.ipynb
+++ b/functional_classifier.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -301,6 +301,71 @@
    ],
    "source": [
     "sorted([(disease_db[i]['name'],p) for i,p in enumerate(prob)],key=lambda x: -x[1])[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vv=forum_vectorizer.transform([\"I have a skin irritation on the side\\\n",
+    "of my private part. Initially it looked like a mosquito bite bite \\\n",
+    "(a small bumb). Itt now seems to be redish and circular. \\\n",
+    "I have tried lamisil cream but t still persists. I have not \\\n",
+    "been intimate for more than two years. Is this a STI and what \\\n",
+    "over the counter medication can I use to cure this? This irritation \\\n",
+    "has been there for more than two weeks. I do not have any pain when urinating.\\\n",
+    "It is summer where I am now and hot.\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[398, 432, 444, 445, 652, 656]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nonzero(np.array(vv.todense()))[1].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([u'ani', u'cream', u'cure', u'ha', u'hot', u'irrit', u'like',\n",
+       "       u'look', u'look like', u'medic', u'pain', u'skin', u'small', u'thi',\n",
+       "       u'tri', u'use', u'week', u'year'], \n",
+       "      dtype='<U18')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(forum_vectorizer.get_feature_names())[np.nonzero(np.array(vv.todense()))[1].tolist()]"
    ]
   },
   {
